<resources>
    <!--welcome view-->
    <string name="app_name">HealthHub</string>
    <string name="personal_info_welcome_text">안녕하세요 HealthHub 입니다!\n개인 정보를 입력해주세요</string>
    <string name="personal_info_nickname">닉네임</string>
    <string name="personal_info_nickname_hint">사용하실 닉네임을 입력해주세요</string>
    <string name="personal_info_height">키</string>
    <string name="personal_info_height_hint">키를 입력해주세요 (cm 제외)</string>
    <string name="personal_info_weight">몸무게</string>
    <string name="personal_info_weight_hint">몸무게를 입력해주세요 (kg 제외)</string>
    <string name="personal_info_gender">성별</string>
    <string name="personal_info_gender_male">남</string>
    <string name="personal_info_gender_female">여</string>
    <string name="personal_info_male">남</string>
    <string name="personal_info_female">여</string>

    <!--home view-->
    <string name="home_title">%s님\n오늘은 어떤 목적으로 방문하였나요?</string>
    <string name="home_streching">스트래칭 하기</string>
    <string name="home_exercise">운동 시작하기</string>
    <string name="home_food">식단 관리하기</string>
    <string name="home_water">수분섭취 체크하기</string>

    <!--calorie view-->
    <string name="calorie_text_meal">님의 식단</string>
    <string name="calorie_food_kind">오늘은 어떤 음식을 드셨나요?</string>
    <string name="calorie_breakfast">아침</string>
    <string name="calorie_lunch">점심</string>
    <string name="calorie_dinner">저녁</string>
    <string name="calorie_calculate">칼로리 계산하기</string>
    <string name="calorie_text_total_calorie">오늘 섭취한 총 칼로리는?</string>
    <string name="calorie_kcal">kcal</string>
    <string name="calorie_text_recommend">님은 오늘 권장 kcal의</string>
    <string name="calorie_text_eat">% 만큼 섭취하셨습니다!</string>


    <!--water view-->
    <string name="water_hint">물병 하나 당 200mL로 계산</string>
    <string name="watercheck_text">오늘은 얼마나 물을 마셨나요?</string>
    <string name="watercheck_text_who">세계 보건기구(WHO)에 따르면 \n 하루 적정 물 섭취량은 2L(8잔)입니다!</string>
</resources>