<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/spacing24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/spacing24" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/personal_info_welcome_text"
            android:textAppearance="@style/TextAppearance.Title1"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/personal_info_nickname"
            android:textAppearance="@style/TextAppearance.Subhead"
            app:layout_constraintStart_toStartOf="@id/tv_welcome"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_nickname"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:theme="@style/TextInputLayout"
            app:layout_constraintEnd_toEndOf="@id/tv_welcome"
            app:layout_constraintStart_toStartOf="@id/tv_nickname"
            app:layout_constraintTop_toBottomOf="@id/tv_nickname">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/personal_info_nickname_hint"
                android:inputType="text"
                android:textColorHint="@color/gray_300" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/personal_info_height"
            android:textAppearance="@style/TextAppearance.Subhead"
            app:layout_constraintStart_toStartOf="@id/til_nickname"
            app:layout_constraintTop_toBottomOf="@id/til_nickname" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_height"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:theme="@style/TextInputLayout"
            app:layout_constraintEnd_toEndOf="@id/tv_welcome"
            app:layout_constraintStart_toStartOf="@id/tv_height"
            app:layout_constraintTop_toBottomOf="@id/tv_height">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/personal_info_height_hint"
                android:inputType="text"
                android:textColorHint="@color/gray_300" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/personal_info_weight"
            android:textAppearance="@style/TextAppearance.Subhead"
            app:layout_constraintStart_toStartOf="@id/til_height"
            app:layout_constraintTop_toBottomOf="@id/til_height" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_weight"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:theme="@style/TextInputLayout"
            app:layout_constraintEnd_toEndOf="@id/tv_welcome"
            app:layout_constraintStart_toStartOf="@id/tv_weight"
            app:layout_constraintTop_toBottomOf="@id/tv_weight">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/personal_info_weight_hint"
                android:inputType="text"
                android:textColorHint="@color/gray_300" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/personal_info_gender"
            android:textAppearance="@style/TextAppearance.Subhead"
            app:layout_constraintStart_toStartOf="@id/til_weight"
            app:layout_constraintTop_toBottomOf="@id/til_weight" />

        <CheckBox
            android:id="@+id/checkbox_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_info_gender_male"
            android:textAppearance="@style/TextAppearance.Subhead"
            app:layout_constraintStart_toStartOf="@id/tv_gender"
            app:layout_constraintTop_toBottomOf="@id/tv_gender" />

        <CheckBox
            android:id="@+id/checkbox_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/personal_info_gender_female"
            android:textAppearance="@style/TextAppearance.Subhead"
            app:layout_constraintStart_toEndOf="@id/checkbox_male"
            app:layout_constraintTop_toTopOf="@id/checkbox_male" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
