<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.healthhub.presentation.info.PersonalInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/spacing24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/spacing24" />

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="3dp"
            android:shadowColor="#ffffff"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="10"
            android:textAppearance="@style/TextAppearance.Title1"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="nickname" />

        <TextView
            android:id="@+id/tv_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="10"
            android:text="@string/calorie_text_meal"
            android:textAppearance="@style/TextAppearance.Title1"
            app:layout_constraintBottom_toBottomOf="@id/tv_user"
            app:layout_constraintStart_toEndOf="@+id/tv_user"
            app:layout_constraintTop_toTopOf="@+id/tv_user" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/yellow"
            android:padding="4dp"
            android:shadowColor="@color/white"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="5"
            android:text="@string/calorie_food_kind"
            android:textAppearance="@style/TextAppearance.Title1"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_user" />

        <ImageView
            android:id="@+id/iv_day1"
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/day1"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintStart_toStartOf="@id/btn_breakfast"
            app:layout_constraintTop_toBottomOf="@id/textView1" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_breakfast"
            style="@style/Widget.FullButton.Basic.Vertical"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/main_4"
            android:text="@string/calorie_breakfast"
            android:textAppearance="@style/TextAppearance.Title1"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/iv_day1" />

        <ImageView
            android:id="@+id/iv_day2"
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/day2"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintStart_toStartOf="@id/btn_lunch"
            app:layout_constraintTop_toBottomOf="@id/textView1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_lunch"
            style="@style/Widget.FullButton.Basic.Vertical"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/main_4"
            android:text="@string/calorie_lunch"
            android:textAppearance="@style/TextAppearance.Title1"
            app:layout_constraintEnd_toStartOf="@+id/btn_dinner"
            app:layout_constraintStart_toEndOf="@id/btn_breakfast"
            app:layout_constraintTop_toBottomOf="@id/iv_day2" />

        <ImageView
            android:id="@+id/iv_day3"
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/day3"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintStart_toStartOf="@id/btn_dinner"
            app:layout_constraintTop_toBottomOf="@id/textView1" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dinner"
            style="@style/Widget.FullButton.Basic.Vertical"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/main_4"
            android:text="@string/calorie_dinner"
            android:textAppearance="@style/TextAppearance.Title1"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintTop_toBottomOf="@+id/iv_day3" />

        <EditText
            android:id="@+id/et_morning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="700kcal"
            android:textAppearance="@style/TextAppearance.Title2"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/btn_breakfast" />

        <EditText
            android:id="@+id/et_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="900kcal"
            android:textAppearance="@style/TextAppearance.Title2"
            app:layout_constraintEnd_toStartOf="@id/et_dinner"
            app:layout_constraintStart_toEndOf="@id/et_morning"
            app:layout_constraintTop_toBottomOf="@id/btn_lunch" />

        <EditText
            android:id="@+id/et_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="600kcal"
            android:textAppearance="@style/TextAppearance.Title2"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintTop_toBottomOf="@id/btn_dinner" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_calc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/main_1"
            android:text="@string/calorie_calculate"
            android:textAppearance="@style/TextAppearance.Title2"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/et_morning" />

        <TextView
            android:id="@+id/tv_total_calorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/yellow"
            android:padding="4dp"
            android:shadowColor="@color/white"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="5"
            android:text="@string/calorie_text_total_calorie"
            android:textAppearance="@style/TextAppearance.Title1"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/btn_calc" />

        <TextView
            android:id="@+id/tv_calorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="600"
            android:textAppearance="@style/TextAppearance.Title1"
            android:textColor="@color/main_3"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/tv_total_calorie" />

        <TextView
            android:id="@+id/tv_kcal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/calorie_kcal"
            android:textAppearance="@style/TextAppearance.Title1"
            app:layout_constraintStart_toEndOf="@id/tv_calorie"
            app:layout_constraintTop_toBottomOf="@id/tv_total_calorie" />

        <TextView
            android:id="@+id/tv_user_tmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textAppearance="@style/TextAppearance.Title1"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/tv_calorie"
            tools:text="nickname" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/calorie_text_recommend"
            android:textAppearance="@style/TextAppearance.Title1"
            app:layout_constraintBottom_toBottomOf="@id/tv_user_tmp"
            app:layout_constraintStart_toEndOf="@id/tv_user_tmp"
            app:layout_constraintTop_toTopOf="@id/tv_user_tmp" />

        <TextView
            android:id="@+id/calorie_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="85"

            android:textAppearance="@style/TextAppearance.Title1"
            android:textColor="@color/main_4"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/tv_user_tmp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/calorie_text_eat"
            android:textAppearance="@style/TextAppearance.Title1"
            app:layout_constraintBottom_toBottomOf="@id/calorie_percent"
            app:layout_constraintStart_toEndOf="@id/calorie_percent"
            app:layout_constraintTop_toTopOf="@id/calorie_percent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
