<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_center_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:contentDescription="Logo"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:lineSpacingExtra="7dp"
            android:text="안녕하세요 홍길동님!\n오늘은 어떤 목적으로 오셨나요?"
            android:textAppearance="@style/TextAppearance.Title1"
            android:textColor="@android:color/black"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_center_icon" />

        <!-- 버튼 1 -->
        <LinearLayout
            android:id="@+id/layout_button_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcomeMessage">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:contentDescription="Image 1"
                android:src="@drawable/stretch" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_stretch"
                style="@style/Widget.FullButton.Basic"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:backgroundTint="@color/main_3"
                android:text="@string/home_streching"
                android:textAppearance="@style/TextAppearance.BodyB1" />
        </LinearLayout>

        <!-- 버튼 2 -->
        <LinearLayout
            android:id="@+id/layout_button_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_button_1">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:contentDescription="Image 2"
                android:src="@drawable/exercise" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_exercise"
                style="@style/Widget.FullButton.Basic"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:backgroundTint="@color/main_2"
                android:text="@string/home_exercise"
                android:textAppearance="@style/TextAppearance.BodyB1" />
        </LinearLayout>

        <!-- 버튼 3 -->
        <LinearLayout
            android:id="@+id/layout_button_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_button_2">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:contentDescription="Image 2"
                android:src="@drawable/food" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_food"
                style="@style/Widget.FullButton.Basic"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:backgroundTint="@color/main_3"
                android:text="@string/home_food"
                android:textAppearance="@style/TextAppearance.BodyB1" />
        </LinearLayout>

        <!-- 버튼 4 -->
        <LinearLayout
            android:id="@+id/layout_button_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_button_3">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:contentDescription="Image 2"
                android:src="@drawable/water" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_water"
                style="@style/Widget.FullButton.Basic"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:backgroundTint="@color/main_2"
                android:text="@string/home_water"
                android:textAppearance="@style/TextAppearance.BodyB1" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
